test(backend): adiciona cobertura de testes para os 8 microsservicos
Implementa testes unitarios (Mockito) e de integracao (MockMvc/REST Assured) para os servicos de negocio e infraestrutura. Filtros de seguranca ignorados nos testes de controlador para isolamento. Pipeline CI atual mantida intacta pois a matrix ja cobre todos os cenarios.