@@ -12,10 +12,13 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.util.Arrays;
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -27,38 +30,76 @@ class RoomServiceTest {
     @InjectMocks
     private RoomService roomService;
 
-    private Room room;
+    private Room roomEntity;
+    private UUID roomId;
 
     @BeforeEach
     void setUp() {
-        room = Room.builder()
-                .id(UUID.randomUUID())
-                .name("Sala VIP")
-                .capacity(10)
-                .status(RoomStatus.AVAILABLE)
-                .build();
+        roomId = UUID.randomUUID();
+
+        roomEntity = new Room();
+        roomEntity.setId(roomId);
+        roomEntity.setName("Sala Alpha");
+        roomEntity.setCapacity(10);
+        roomEntity.setLocation("Andar 1");
+        roomEntity.setStatus(RoomStatus.AVAILABLE);
     }
 
     @Test
-    @DisplayName("Deve retornar lista de salas")
-    void shouldReturnAllRooms() {
-        when(roomRepository.findAll()).thenReturn(List.of(room));
+    @DisplayName("Deve retornar todas as salas")
+    void findAll_Success() {
+        when(roomRepository.findAll()).thenReturn(Arrays.asList(roomEntity));
 
-        List<Room> rooms = roomService.findAll();
+        List<Room> result = roomService.findAll();
 
-        assertFalse(rooms.isEmpty());
-        assertEquals(1, rooms.size());
-        assertEquals("Sala VIP", rooms.get(0).getName());
-        verify(roomRepository, times(1)).findAll(); // Garante que o banco foi chamado 1 vez
+        assertFalse(result.isEmpty());
+        assertEquals(1, result.size());
+        assertEquals("Sala Alpha", result.get(0).getName());
+        verify(roomRepository, times(1)).findAll();
     }
 
     @Test
-    @DisplayName("Deve deletar sala por ID sem disparar erros")
-    void shouldDeleteRoomById() {
-        doNothing().when(roomRepository).deleteById(room.getId());
+    @DisplayName("Deve retornar uma sala por ID com sucesso")
+    void findById_Success() {
+        when(roomRepository.findById(roomId)).thenReturn(Optional.of(roomEntity));
 
-        roomService.deleteById(room.getId());
+        Room result = roomService.findById(roomId);
 
-        verify(roomRepository, times(1)).deleteById(room.getId());
+        assertNotNull(result);
+        assertEquals(roomId, result.getId());
+        assertEquals("Sala Alpha", result.getName());
+    }
+
+    @Test
+    @DisplayName("Deve retornar null ao buscar sala com ID inexistente (Tratamento Cache)")
+    void findById_NotFound_ReturnsNull() {
+        when(roomRepository.findById(any())).thenReturn(Optional.empty());
+
+        Room result = roomService.findById(UUID.randomUUID());
+
+        assertNull(result);
+    }
+
+    @Test
+    @DisplayName("Deve salvar uma sala com sucesso")
+    void save_Success() {
+        when(roomRepository.save(any(Room.class))).thenReturn(roomEntity);
+
+        Room result = roomService.save(roomEntity);
+
+        assertNotNull(result);
+        assertEquals(RoomStatus.AVAILABLE, result.getStatus());
+        assertEquals("Sala Alpha", result.getName());
+        verify(roomRepository, times(1)).save(any(Room.class));
+    }
+
+    @Test
+    @DisplayName("Deve remover uma sala com sucesso")
+    void deleteById_Success() {
+        doNothing().when(roomRepository).deleteById(roomId);
+
+        roomService.deleteById(roomId);
+
+        verify(roomRepository, times(1)).deleteById(roomId);
     }
 }
